# TelegramExchangeRatesBot

./: .coveragerc  .dockerignore  .editorconfig  .env.default  .gitignore  .isort.cfg  .travis.yml  CHANGES.md  Dockerfile  Pipfile  README.md  alembic.ini  babel.cfg  codecov.sh  docker-cmd.sh  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  settings.py
.github/: FUNDING.yml
.github/workflows/: tests.yml
alembic/versions/: 092703cdb64e_initial.py
app/: __init__.py  cache.py  celery.py  constants.py  db.py  decorators.py  exceptions.py  helpers.py  keyboard.py  logic.py  main.py  models.py  queries.py  sentry.py  settings.py  state_storage.py  tasks.py  tasks_notifications.py  translations.py
app/callbacks/: currencies.py  disclaimers.py  donate.py  feedback.py  help.py  price.py  sources.py  start.py  stop.py  tutorial.py
app/commands/: currencies.py  disclaimers.py  feedback.py  help.py  keyboard.py  personal_settings.py  price.py  setups.py  sources.py  start.py  stop.py  tutorial.py
app/converter/: base.py  converter.py  exceptions.py  formatter.py
app/exchanges/: __init__.py  base.py  bitfinex.py  bitkub.py  bittrex.py  bx_in_th.py  exceptions.py  fixer.py  openexchangerates.py  satang.py  sp_today.py  vipchanger.py
app/formatter/: formatter.py
app/libs/: price.py
app/models/: __init__.py  db.py  meta.py  models.py
app/parsers/: __init__.py  base.py  exceptions.py  extend_regex_parser.py  last_request_parser.py  number_format.py  regex_parser.py  simple_parser.py
app/tests/: test_example.py  test_helpers.py  test_keyboard.py  test_logic.py  test_main.py  test_money_pattern.py  test_number_format.py  test_price_pattern.py  test_price_request_pattern.py  test_queries.py  test_regex_parser.py  test_regex_parser_request_pattern.py  test_simple_parser.py  test_tasks.py  test_tasks_notifications.py  test_translations.py
commands/: __init__.py
commands/db/: __init__.py  commands.py
locale/: kh
migrations/: env.py
migrations/versions/: 20190306160951_initial.py  20190306162241_rename_tables.py  20190306164236_chat_request_chat_foreigns.py  20190306193447_currencies_chat_request_foreigns.py  20190311151631_exchange_rates.py  20190314103043_requests_log_refact.py  20190314175025_events.py  20190314182214_chat_settings.py  20190321212933_fixer_exchange.py  20190324223003_convert_locales.py  20190326060130_add_btt_currency.py  20190326083625_add_bx_in_tx_exchange.py  20190326131313_add_syp_exchange.py  20190328125146_notifications.py  20190402024141_chat_rm_personal_data.py  20190402045327_settings_show_keyboard.py  20190404023229_add_vipchanger_exchange.py  20190404054029_keyboard_size.py  20190903073346_bitkub_exchanger.py  20200217055212_satang_exchanger.py  20200217062024_add_xzc_currency.py  20200329134234_referral_bittrex.py  792be0f338f8_rename_tables.py  79fd60fe1187_auto_20190306_1934.py  79fd60fe1187_currencies_chat_request_foreigns.py  8b7deeb35c6c_initial.py  (+3 more)
(+81 files in other folders)
